fix(CollapsePanel): add --td-collapse-left-icon-color

--- a/packages/components/collapse-panel/collapse-panel.less
+++ b/packages/components/collapse-panel/collapse-panel.less
@@ -13,6 +13,7 @@
 @collapse-horizontal-padding: var(--td-collapse-horizontal-padding, 32rpx);
 @collapse-content-padding: var(--td-collapse-content-padding, 32rpx);
 @collapse-border-color: var(--td-collapse-border-color, @border-level-1-color);
+@collapse-left-icon-color: var(--td-collapse-left-icon-color, @brand-color);
 @collapse-icon-color: var(--td-collapse-icon-color, @text-color-placeholder);
 
 @collapse-panel-bg-color: var(--td-collapse-panel-bg-color, @bg-color-container);
@@ -42,7 +43,8 @@
     padding-left: @collapse-horizontal-padding;
     height: @collapse-header-height;
     --td-cell-title-color: @collapse-header-text-color;
-    --td-cell-left-icon-color: @collapse-icon-color;
+    --td-cell-left-icon-color: @collapse-left-icon-color;
+    --td-cell-right-icon-color: @collapse-icon-color;
 
     &--top {
       .border(top, @collapse-border-color);
